<resources>
    <string name="app_name">badmintonScoreKeeper</string>
    <string name="BTitle">Badminton Score Counter</string>
    <string name="Aces">Aces</string>
    <string name="In">In</string>
    <string name="OppOut">Opp Out</string>
    <string name="OppNet">Opp Net</string>
    <string name="Fault">Faults</string>
    <string name="Score">Score</string>
    <string name="CScore">0</string>
    <string name="Reset">Reset</string>
    <string name="BtnTemp">Btn</string>
</resources>
